--- a/othersites/template_with_bts.html
+++ b/othersites/template_with_bts.html
@@ -12,7 +12,12 @@
 	
 		
 		<p>Paragraph</p>
+		
 	
 	</body>
+	
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery-3.1.0.min.js"></script>
+	
 
 </html>
